# covid_community_levels

./: .gitignore  LICENSE.md  README.md  demo.txt  ingest.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
analytics/: queries.sql
dashboard/: app.py
data/: sample.csv
data/docs/: README.md
dbt_project/: README.md
etl/: Dockerfile  __init__.py  transform.py
tests/: test_etl.py
