[metadata]
name = covid-community-levels
version = 0.0.1
description = Covid community levels utilities

[options]
# use package discovery but limit it to the etl package and subpackages
packages = find:
install_requires =
    pandas
    requests

[options.packages.find]
# Only include the etl package and any subpackages (etl.*)
include =
    etl
    etl.*